--- a/1.src/src/app/auth/auth.component.html
+++ b/1.src/src/app/auth/auth.component.html
@@ -1,13 +1,17 @@
-<div class="row">
+<div class="row mt-5">
   <div style="height: 200px">&nbsp;</div>
   <div class="col-sm-3"></div>
   <div class="col-sm-6">
     <!-- template driven forms -->
 
+    <h1 class="text-center">Welcome</h1>
+    <app-notif-danger *ngIf="error" msg ="{{error}}"></app-notif-danger>
+
+    
     <form>
       <div class="form-group">
         Login
-        <input type="text" class="form-control" #login required />
+        <input type="email" class="form-control" #login required />
       </div>
       <div class="form-group">
         Password
