--- a/1.src/src/app/components/side-bar/side-bar.component.html
+++ b/1.src/src/app/components/side-bar/side-bar.component.html
@@ -5,19 +5,12 @@
       >Dashboard</a
     >
     <a href="#" class="list-group-item list-group-item-action bg-light"
-      >Shortcuts</a
+      >Utilisteur</a
     >
     <a href="#" class="list-group-item list-group-item-action bg-light"
-      >Overview</a
+      >Employer</a
     >
-    <a href="#" class="list-group-item list-group-item-action bg-light"
-      >Events</a
-    >
-    <a href="#" class="list-group-item list-group-item-action bg-light"
-      >Profile</a
-    >
-    <a href="#" class="list-group-item list-group-item-action bg-light"
-      >Status</a
-    >
+   
+   
   </div>
 </div>
